@@ -2479,7 +2479,7 @@ module Asciidoctor
           end
           %(#{anchor}<sup>[<a anchor="_footnotedef_#{index}">#{label}</a>]</sup>)
         elsif node.type == :xref
-          %(<sup><font color="#{theme.role_unresolved_font_color}">[#{node.text}]</font></sup>)
+          %(<sup>[<font color="#{theme.role_unresolved_font_color}">#{node.text}</font>]</sup>)
         else
           log :warn, %(unknown footnote type: #{node.type.inspect})
           nil
@@ -2827,6 +2827,7 @@ module Asciidoctor
           advance_page if orphaned
         else
           theme_font :heading, level: (hlevel = opts[:level]) do
+            title = transform_text title, @text_transform if @text_transform
             h_padding_t, h_padding_r, h_padding_b, h_padding_l = expand_padding_value @theme[%(heading_h#{hlevel}_padding)]
             h_fits = indent h_padding_l, h_padding_r do
               # FIXME: this height doesn't account for impact of text transform or inline formatting
